Mark T048/T032 done: CI green on Java 21 (003)
GitHub Actions "Java CI" run 26886502532 SUCCESS (7m50s) on the fix commit
d58cc50bf — first green mvn -B package (build + tests) on Java 21. The CI had
been red since 2026-05-30 due to OCRParserTest PSD/SVG (png-reader/JEP 396
regression, not environment).

- tasks.md: T048 [X] (CI green), T032 [X] (100% all modules green; corrected
  the stale "fails only on local env" note).
- implementation-report.md 2.7: CI green confirmation, closes FR-013/SC-001.
- quickstart.md 7: Testes gate now CI-green.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>